--- a/applications/contact-service/pom.xml
+++ b/applications/contact-service/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!--MARIADB-->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+        </dependency>
+
         <!--HSQL-->
         <dependency>
             <groupId>org.hsqldb</groupId>
