--- a/applications/passport-service/src/main/resources/local/application-cloud.properties
+++ b/applications/passport-service/src/main/resources/local/application-cloud.properties
@@ -11,3 +11,5 @@ eureka.client.enabled=false
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
 registry.client.hostname=${spring.application.name}.default.svc.cluster.local
+
+logging.file.name=/opt/log/${POD_NAME}.log
