--- a/applications/passport-service/src/main/resources/local/application.properties
+++ b/applications/passport-service/src/main/resources/local/application.properties
@@ -10,5 +10,6 @@ registry.server.user=eureka
 registry.server.password=eurekasecret
 
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
 spring.profiles.include=common
