--- a/services/resource-gateway-service/src/main/resources/local/application-cloud.properties
+++ b/services/resource-gateway-service/src/main/resources/local/application-cloud.properties
@@ -20,3 +20,5 @@ zuul.routes.contact-service.serviceId=contact-service
 zuul.routes.passport-service.url=http://passport-service.default.svc.cluster.local
 zuul.routes.passport-service.path=/passport-service/**
 zuul.routes.passport-service.serviceId=passport-service
+
+logging.file.name=/opt/log/${POD_NAME}.log
