--- a/applications/contact-service/src/main/resources/local/application-cloud.properties
+++ b/applications/contact-service/src/main/resources/local/application-cloud.properties
@@ -5,6 +5,17 @@ client.ssl.enabled=false
 security.enabled=false
 eureka.client.enabled=false
 
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:mariadb://maria-db.default.svc.cluster.local:3306/${spring.application.name}
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
 registry.client.hostname=${spring.application.name}.default.svc.cluster.local
+
+logging.file.name=/opt/log/${POD_NAME}.log
