--- a/applications/contact-service/src/main/resources/local/application.properties
+++ b/applications/contact-service/src/main/resources/local/application.properties
@@ -10,13 +10,6 @@ registry.server.user=eureka
 registry.server.password=eurekasecret
 
 management.endpoints.web.exposure.include=*
-
-spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:hsqldb:file:./application/contact-service/target/db/testdb
-spring.datasource.username=dbuser
-spring.datasource.password=dbpass
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-
-spring.jpa.hibernate.ddl-auto=create
+management.endpoint.health.show-details=always
 
 spring.profiles.include=common
