add security for services in kubernetes

--- a/applications/contact-service/src/main/resources/local/application-cloud.properties
+++ b/applications/contact-service/src/main/resources/local/application-cloud.properties
@@ -2,17 +2,21 @@ server.port=80
 
 server.ssl.enabled=false
 client.ssl.enabled=false
-security.enabled=false
+#security.enabled=false
 eureka.client.enabled=false
 
+security.server.hostname=192.168.33.1
+security.server.port=31999
+
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:mariadb://maria-db.default.svc.cluster.local:3306/${spring.application.name}
+spring.datasource.url=jdbc:mariadb://maria-db.default.svc.cluster.local:3306/contact_service
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
