--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
         location ~* /echo-service/headeradd.* {
             proxy_pass   https://resource-gateway-service:9025;
             proxy_set_header Added-Proxy-Header "myNewFancyProxyHeader"; # edit header
-            add_header Added-Response-Header "myNewFancyResponseHeader";; # add header
+            add_header Added-Response-Header "myNewFancyResponseHeader"; # add header
         }
 
         location / {
