--- a/applications/passport-service/src/main/resources/local/application-cloud.properties
+++ b/applications/passport-service/src/main/resources/local/application-cloud.properties
@@ -5,8 +5,11 @@ feign.client.contact-service.url=contact-service.default.svc.cluster.local:80
 
 server.ssl.enabled=false
 client.ssl.enabled=false
-security.enabled=false
+#security.enabled=false
 eureka.client.enabled=false
+
+security.server.hostname=192.168.33.1
+security.server.port=31999
 
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
