--- a/services/resource-gateway-service/src/main/resources/local/application-cloud.properties
+++ b/services/resource-gateway-service/src/main/resources/local/application-cloud.properties
@@ -2,8 +2,11 @@ server.port=80
 
 server.ssl.enabled=false
 client.ssl.enabled=false
-security.enabled=false
+#security.enabled=false
 eureka.client.enabled=false
+
+security.server.hostname=192.168.33.1
+security.server.port=31999
 
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
