--- a/services/sso-auth-service/src/main/resources/local/application-default.properties
+++ b/services/sso-auth-service/src/main/resources/local/application-default.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:hsqldb:file:./services/sso-auth-service/target/db/tes
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.schema=classpath:db/hsql/schema.sql
+spring.datasource.data=classpath:db/hsql/data.sql
 
 spring.jpa.hibernate.ddl-auto=validate
-
