configuration for custom namespace

--- a/applications/contact-service/src/main/resources/prod/application-cloud.properties
+++ b/applications/contact-service/src/main/resources/prod/application-cloud.properties
@@ -1,4 +1,5 @@
 server.port=80
+server.domain=${POD_NAMESPACE}.svc.cluster.local
 
 server.ssl.enabled=false
 client.ssl.enabled=false
@@ -9,7 +10,7 @@ security.server.hostname=192.168.33.1
 security.server.port=31999
 
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:mariadb://maria-db.default.svc.cluster.local:3306/contact_service
+spring.datasource.url=jdbc:mariadb://maria-db.${server.domain}:3306/contact_service
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -18,8 +19,8 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 
-registry.server.hostname=eureka-service.default.svc.cluster.local
+registry.server.hostname=eureka-service.${server.domain}
 registry.server.port=80
-registry.client.hostname=${spring.application.name}.default.svc.cluster.local
+registry.client.hostname=${spring.application.name}.${server.domain}
 
 logging.file.name=/opt/log/${POD_NAME}.log
