--- a/applications/passport-service/src/main/resources/prod/application-cloud.properties
+++ b/applications/passport-service/src/main/resources/prod/application-cloud.properties
@@ -1,7 +1,8 @@
 server.port=80
+server.domain=${POD_NAMESPACE}.svc.cluster.local
 
-feign.client.bookmark-service.url=bookmark-service.default.svc.cluster.local:80
-feign.client.contact-service.url=contact-service.default.svc.cluster.local:80
+feign.client.bookmark-service.url=bookmark-service.${server.domain}:80
+feign.client.contact-service.url=contact-service.${server.domain}:80
 
 server.ssl.enabled=false
 client.ssl.enabled=false
@@ -11,8 +12,8 @@ eureka.client.enabled=false
 security.server.hostname=192.168.33.1
 security.server.port=31999
 
-registry.server.hostname=eureka-service.default.svc.cluster.local
+registry.server.hostname=eureka-service.${server.domain}
 registry.server.port=80
-registry.client.hostname=${spring.application.name}.default.svc.cluster.local
+registry.client.hostname=${spring.application.name}.${server.domain}
 
 logging.file.name=/opt/log/${POD_NAME}.log
