--- a/services/sso-auth-service/src/main/resources/prod/application-cloud.properties
+++ b/services/sso-auth-service/src/main/resources/prod/application-cloud.properties
@@ -1,9 +1,10 @@
 server.port=80
+server.domain=${POD_NAMESPACE}.svc.cluster.local
 
 server.ssl.enabled=false
 client.ssl.enabled=false
 
-spring.datasource.url=jdbc:mariadb://maria-db.default.svc.cluster.local:3306/sso_auth_service
+spring.datasource.url=jdbc:mariadb://maria-db.${server.domain}:3306/sso_auth_service
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
