--- a/kubernetes/applications/contact-service.yaml
+++ b/kubernetes/applications/contact-service.yaml
@@ -39,6 +39,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           volumeMounts:
             - mountPath: "/opt/log"
               name: app-logs-volume
