--- a/kubernetes/applications/resource-gateway-service.yaml
+++ b/kubernetes/applications/resource-gateway-service.yaml
@@ -41,6 +41,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           volumeMounts:
             - mountPath: "/opt/log"
               name: app-logs-volume
