--- a/kubernetes/applications/sso-auth-service.yaml
+++ b/kubernetes/applications/sso-auth-service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: sso-auth-service
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: sso-auth-service
@@ -39,6 +39,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           volumeMounts:
             - mountPath: "/opt/log"
               name: app-logs-volume
