--- a/services/resource-gateway-service/src/main/resources/prod/application-cloud.properties
+++ b/services/resource-gateway-service/src/main/resources/prod/application-cloud.properties
@@ -1,4 +1,5 @@
 server.port=80
+server.domain=${POD_NAMESPACE}.svc.cluster.local
 
 server.ssl.enabled=false
 client.ssl.enabled=false
@@ -8,19 +9,19 @@ eureka.client.enabled=false
 security.server.hostname=192.168.33.1
 security.server.port=31999
 
-registry.server.hostname=eureka-service.default.svc.cluster.local
+registry.server.hostname=eureka-service.${server.domain}
 registry.server.port=80
-registry.client.hostname=${spring.application.name}.default.svc.cluster.local
+registry.client.hostname=${spring.application.name}.${server.domain}
 
-zuul.routes.bookmark-service.url=http://bookmark-service.default.svc.cluster.local
+zuul.routes.bookmark-service.url=http://bookmark-service.${server.domain}
 zuul.routes.bookmark-service.path=/bookmark-service/**
 zuul.routes.bookmark-service.serviceId=bookmark-service
 
-zuul.routes.contact-service.url=http://contact-service.default.svc.cluster.local
+zuul.routes.contact-service.url=http://contact-service.${server.domain}
 zuul.routes.contact-service.path=/contact-service/**
 zuul.routes.contact-service.serviceId=contact-service
 
-zuul.routes.passport-service.url=http://passport-service.default.svc.cluster.local
+zuul.routes.passport-service.url=http://passport-service.${server.domain}
 zuul.routes.passport-service.path=/passport-service/**
 zuul.routes.passport-service.serviceId=passport-service
 
