--- a/parents/starter-parent/pom.xml
+++ b/parents/starter-parent/pom.xml
@@ -112,6 +112,13 @@
                             </apiSource>
                         </apiSources>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.3.1</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>io.swagger</groupId>
