use sso service through ingress, add header support for get in echo service

--- a/services/resource-gateway-service/src/main/resources/prod/application-cloud.properties
+++ b/services/resource-gateway-service/src/main/resources/prod/application-cloud.properties
@@ -6,8 +6,8 @@ client.ssl.enabled=false
 #security.enabled=false
 eureka.client.enabled=false
 
-security.server.hostname=192.168.33.1
-security.server.port=31999
+security.server.hostname=sso-auth-service.localdev.me
+security.server.port=30080
 
 registry.server.hostname=eureka-service.${server.domain}
 registry.server.port=80
