--- a/applications/contact-service/src/main/resources/prod/application-cloud.properties
+++ b/applications/contact-service/src/main/resources/prod/application-cloud.properties
@@ -6,8 +6,8 @@ client.ssl.enabled=false
 #security.enabled=false
 eureka.client.enabled=false
 
-security.server.hostname=192.168.33.1
-security.server.port=31999
+security.server.hostname=sso-auth-service.localdev.me
+security.server.port=30080
 
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:mariadb://maria-db.${server.domain}:3306/contact_service
