--- a/kubernetes/ingress/ingress.yaml
+++ b/kubernetes/ingress/ingress.yaml
@@ -67,6 +67,16 @@ spec:
                 name: echo-service
                 port:
                   number: 80
+    - host: sso-auth-service.localdev.me
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: sso-auth-service
+                port:
+                  number: 80
 #---
 #apiVersion: v1
 #kind: Service
