--- a/services/sso-auth-service/src/main/resources/common/application.properties
+++ b/services/sso-auth-service/src/main/resources/common/application.properties
@@ -10,7 +10,9 @@ server.servlet.context-path=/sso
 security.authorization.clientUser=acme
 security.authorization.clientPassword=acmesecret
 security.authorization.signingKey=A&'/}Z57M(2hNg=;LE?~]YtRMS5(yZ<vcZTA3N-($>2j:ZeX-BGftaVk`)jKP~q?,jk)EMbgt*kW'(
+security.authorization.publicKey=true
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${server.protocol}://${server.hostname}:${server.port}${server.servlet.context-path}
 
 management.endpoints.web.exposure.include=*
 
@@ -22,5 +24,3 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.jpa.hibernate.ddl-auto=validate
 
 server.ssl.client-auth=none
-
-spring.profiles.include=common
