--- a/applications/echo-service/pom.xml
+++ b/applications/echo-service/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
         <!--Validation-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
